--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myportfolio",
+  "homepage": "https://amans8270.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
